# caesar

./: .gitignore  README.md  index.html  justfile  package-lock.json  package.json  vitest.config.ts  vitest.integration.config.ts
.github/workflows/: ci.yml  integration-nightly.yml
src/: A2AContactView.tsx  A2ACreateBatchAgentsView.tsx  A2ACreateLocalAgentView.tsx  A2ALocalAgentsView.tsx  A2AMyAgentView.tsx  A2ARegistrySettingsView.tsx  A2ARegistryView.tsx  AgentAvatar.tsx  App.css  App.tsx  AvatarAudioProvider.tsx  ChatInput.tsx  ChatView.test.tsx  ChatView.tsx  FallbackAggregateCreateView.tsx  GlobalAvatarVoiceSession.tsx  InstructionBlocksEditor.tsx  IntegrationsPanel.tsx  IntegrationsView.tsx  JobDetail.tsx  JobEdit.tsx  JobsList.tsx  MCPServersView.tsx  MeetingsView.tsx  MessageList.tsx  MyMindView.tsx  NotificationsView.tsx  ProjectSourceEditor.tsx  ProjectView.tsx  ProviderEditView.tsx  ProvidersView.tsx  SessionsList.tsx  SettingsPanel.tsx  SettingsView.tsx  Sidebar.tsx  SkillsView.tsx  SoulFilePickerDialog.tsx  SubAgentsView.tsx  SystemPromptMessage.tsx  TaskProgressPanel.tsx  (+21 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: InlineSessionGitSummary.tsx
src/lib/: a2aIdentity.ts  agentVisuals.ts  dialogs.ts  gravatar.ts  instructionBlocks.ts  integrationMeta.tsx  markdown.test.ts  markdown.ts  myMindNavigation.test.ts  myMindNavigation.ts  projectSourceSelection.ts  skills.ts  thinking.test.ts  toolIcons.ts  toolResultEvents.ts  voiceInputEvents.ts  webappNotifications.ts  (+1 more)
(+48 files in other folders)
