[package]
name = "caesar"
version = "0.1.0"
description = "A²gent Caesar desktop app"
authors = ["A²gent"]
edition = "2021"

[lib]
name = "caesar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
